Fixed some styling problems with the modal on full screen size. Modal iamges were way too big. Also added some styling lines to line up the modal image on handheld devices to the middel of the screen.

--- a/src/product-grid/style.scss
+++ b/src/product-grid/style.scss
@@ -2,9 +2,6 @@
 	&__container {
 		&--product-grid {
 			position: relative;
-			// width: 1000px;
-			// margin: 0 auto;
-			// background-color: white;
 			padding-left: 1.2rem;
 			padding-right: 1.2rem;
 
@@ -45,10 +42,25 @@
 
 				img {
 					position: relative;
-					left: 10%;
-					width: 80%;
+					left: 20%;
+					width: 60%;
+					height: auto;
 					margin: 0 auto;
 					box-shadow: 3px 3px 10px rgb(44, 44, 44);
+
+					@include Responsive($tabletBreakpoint) {
+						left: 0;
+						width: 100%;
+						height: auto;
+						position: relative;
+						top: calc(50% - 50px);
+						top: -moz-calc(50% - 50px);
+						top: -webkit-calc(50% - 50px);
+						transform: translateY(-50%);
+						-webkit-transform: translateY(-50%);
+						-moz-transform: translateY(-50%);
+						z-index: 0;
+					}
 				}
 			}
 
@@ -83,6 +95,7 @@
 				border-radius: 0 3px 3px 0;
 				user-select: none;
 				-webkit-user-select: none;
+				z-index: 5;
 			}
 
 			/* Position the "next button" to the right */
